# rktop

./: .gitignore  .mailmap  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
src/: file_cache.rs  hardware.rs  main.rs  sysinfo_ext.rs
