[package]
name = "rktop"
version = "0.1.0"
edition = "2021"
authors = ["Alex Jokela <alex@camulus.com>"]
license = "BSD-3-Clause"
description = "High-performance system monitor for Rockchip SoCs (RK3588, RK3399) with real-time CPU, GPU, NPU, RGA, memory, and process monitoring"
repository = "https://github.com/ajokela/rktop"
readme = "README.md"
keywords = ["rockchip", "system-monitor", "rk3588", "embedded", "tui"]
categories = ["command-line-utilities", "embedded"]

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
sysinfo = "0.32"
regex = "1.11"
anyhow = "1.0"
thiserror = "2.0"
nix = { version = "0.29", features = ["user"] }
goblin = "0.9"
